@@ -2,16 +2,20 @@
 ### Xmit File Viewer
 View the contents of XMIT files.
 
-###I nstallation
+### Installation
 #### Download and install Java and JavaFX
-Java and JavaFX are now separate downloads.
+Java and JavaFX are now separate downloads. 
 
 #### Download XmitApp.jar
-Get it here.
+Download XmitApp.jar from the [releases](https://github.com/dmolony/xmit/releases) page.
 
 #### Create executable run file
 ##### MacOs or Unix
 Shell file.
+/path/to/jdk-11.0.1.jdk/Contents/Home/bin/java --module-path /path/to/javafx-sdk-11/lib --add-modules=javafx.controls,javafx.fxml -Dfile.encoding=UTF-8 -jar /path/to/XmitApp.jar
+
 
 ##### Windows
 Batch file.
+C:\path\to\jdk-11.0.1\bin\java.exe --module-path C:\path\to\javafx-sdk-11.0.1\lib --add-modules=javafx.controls,javafx.fxml -Dfile.encoding=UTF-8 -jar C:\path\to\XmitApp.jar
+
